# chatbot-azure

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  azure.yaml  deploy-backend.sh  deploy-frontend.sh  deploy-functions.sh  get-outputs.sh  get_urls.sh  template.yaml  update-env.py
backend/: .dockerignore  Dockerfile  function_app.py  pyproject.toml  requirements.txt  run.sh
backend/app/: dependencies.py  logging_config.py  main.py  settings.py  worker.py
backend/app/api/: routes.py
backend/app/models/: schemas.py
backend/app/repositories/: conversation_repository.py
backend/app/services/: llm.py  prompt.py  rag.py  storage.py  vector_store.py
backend/app/utils/: time.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_history.py  test_rag.py
docs/: AWS_CHNAGES_IN_CONFIG_FOR_STREAMING.md  AWS_COSTING_GOTCHAS.md  AWS_DEPLOYMENT_BACKEND.md  AWS_DEPLOYMENT_BACKEND_BEFORE_SSE.md  AWS_DEPLOYMENT_FRONTEND.md  AWS_EVENT_DRIVEN_INGESTION.md  AWS_INFRASTRUCTURE_EVOLUTION_LOG.md  AWS_PROD_STAGING.md  AWS_S3_VECTORS_RAG_GUIDE.md  AWS_SAM_LOCAL_TESTING.md  AWS_SAM_TEMPLATE_ANALYSIS.md  AWS_SERVICES_BEGINNER_GUIDE.md  AZURE_CHANGES_DONE_WHILE_DEPLOYMENT.md  AZURE_COSTING_GOTCHAS.md  AZURE_DEPLOYMENT_GUIDE.md  AZURE_MIGRATION_GUIDE.md  CLERK_AUTH_SETUP.md  COGNITO_AUTH.md  COMPREHENSIVE_ARCHITECTURE.md  GCP_MIGRATION_GUIDE.md  SSE_STREAMING_GUIDE.md
docs/migration/: PHASE_0_OVERVIEW.md  (+11 more)
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  staticwebapp.config.json  vite.config.ts
infra/: abbreviations.json  main.bicep  main.json
(+23 files in other folders)
