[project]
name = "chatbot-backend"
version = "0.2.0"
description = "Backend for serverless chatbot (Azure)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "litellm>=1.41.0",
  "PyJWT>=2.8.0",
  "cryptography>=42.0.0",
  "azure-storage-blob>=12.20.0",
  "azure-cosmos>=4.7.0",
  "azure-ai-documentintelligence>=1.0.0b4",
  "azure-storage-queue>=12.10.0",
  "azure-identity>=1.17.0",
  "azure-keyvault-secrets>=4.8.0",
  "azure-functions",
]


[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
